--- a/doc/vimage_transforms.ipynb
+++ b/doc/vimage_transforms.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0c3c5b6",
+   "id": "8455c424",
    "metadata": {},
    "source": [
     "## Transform parameters\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8d86901a",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6668a2db",
    "metadata": {},
    "outputs": [],
@@ -120,10 +120,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "171ab068",
+   "execution_count": 3,
+   "id": "1e2f3714",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle ^{ndc}X^{qwn} = \\left[\\begin{matrix}\\frac{2}{w_{win}} & 0 & -1\\\\0 & - \\frac{2}{h_{win}} & 1\\\\0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "                 ⎡  2             ⎤\n",
+       "                 ⎢─────    0    -1⎥\n",
+       "                 ⎢w_win           ⎥\n",
+       "                 ⎢                ⎥\n",
+       "^{ndc}X__{qwn} = ⎢        -2      ⎥\n",
+       "                 ⎢  0    ─────  1 ⎥\n",
+       "                 ⎢       h_win    ⎥\n",
+       "                 ⎢                ⎥\n",
+       "                 ⎣  0      0    1 ⎦"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ndc_X_qwn: Transform to OpenGL normalized device coordinates from Qt window pixel coordinates\n",
     "\n",
@@ -163,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "f945c045",
    "metadata": {},
    "outputs": [
@@ -184,7 +206,7 @@
        "                 ⎣     0             0        1⎦"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "e61184e6",
    "metadata": {},
    "outputs": [
@@ -252,7 +274,7 @@
        "                 ⎣  0        0           1     ⎦"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a29f06b1",
+   "id": "3a92c680",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d2fb369b",
+   "id": "3d7377b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b5be240d",
+   "id": "f3a908d5",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "1e676b15",
+   "id": "f5840a4b",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "a5777305",
+   "id": "9611ec06",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "074d551e",
+   "id": "aa94774e",
    "metadata": {},
    "outputs": [],
    "source": []
