Update notebook with latest facts on the ground.

--- a/doc/vimage_transforms.ipynb
+++ b/doc/vimage_transforms.ipynb
@@ -12,9 +12,10 @@
     "| qwn   | window pixels | top left | down  | Qt window coordinates |\n",
     "| ndc   | half windows  | center   | up    | OpenGL normalized device coordinates |\n",
     "| nic   | half images   | center   | up    | vimage normalized reoriented isotropic image coordinates |\n",
-    "| omp   | image pixels  | top left | down  | EXIF reoriented image pixels |\n",
-    "| txc   | images        | top left | down  | OpenGL texture coordinates |\n",
-    "| ypr   | degrees       | center   | up    | yaw and pitch of 360 image |"
+    "| obq   | radians       | center   | up    | \"oblique\" image sphere rotated to current view |\n",
+    "| ont   | radians       | center   | up    | image sphere rectified to canonical orientation using EXIF/XMP metadata |\n",
+    "| omp   | image pixels  | top left | down  | rectified image pixels |\n",
+    "| txc   | images        | top left | down  | OpenGL texture coordinates |"
    ]
   },
   {
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "8d86901a",
    "metadata": {},
    "outputs": [],
@@ -106,9 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "6668a2db",
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [],
    "source": [
     "# printed symbols of transforms\n",
@@ -120,9 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "1e2f3714",
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -141,7 +150,7 @@
        "                 ⎣  0      0    1 ⎦"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,9 +194,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "f945c045",
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -206,7 +219,7 @@
        "                 ⎣     0             0        1⎦"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,9 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "e61184e6",
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -274,7 +291,7 @@
        "                 ⎣  0        0           1     ⎦"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "id": "3a92c680",
    "metadata": {},
    "outputs": [
@@ -320,7 +337,7 @@
        "                 ⎣     0             0                     1              ⎦"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,9 +349,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "id": "3d7377b1",
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [],
    "source": [
     "# Confidence checks\n",
@@ -375,9 +396,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "id": "f3a908d5",
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -396,7 +421,7 @@
        "                 ⎣     0             0             1      ⎦"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,67 +435,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 20,
    "id": "f5840a4b",
-   "metadata": {},
+   "metadata": {
+    "code_folding": []
+   },
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\operatorname{atan_{2}}{\\left(^{obq}p_x,^{obq}p_z \\right)}\\\\\\operatorname{asin}{\\left(^{obq}p_y \\right)}\\end{matrix}\\right]$"
+       "$\\displaystyle ^{eqr}p = \\left[\\begin{matrix}\\operatorname{atan_{2}}{\\left(^{obq}p_x,- ^{obq}p_z \\right)}\\\\\\operatorname{asin}{\\left(^{obq}p_y \\right)}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡atan2(^{obq}pₓ, ^{obq}p_z)⎤\n",
-       "⎢                          ⎥\n",
-       "⎣     asin(^{obq}p_y)      ⎦"
+       "          ⎡atan2(^{obq}pₓ, -^{obq}p_z)⎤\n",
+       "^{eqr}p = ⎢                           ⎥\n",
+       "          ⎣      asin(^{obq}p_y)      ⎦"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Equirectangular coordinates\n",
+    "# Equirectangular coordinates - heading and pitch (in radians)\n",
+    "# heading is radians clockwise from north/straight-ahead when viewed from above\n",
+    "# pitch is radians above the horizon\n",
+    "\n",
+    "# obq is xyz unit sphere coordinates \"oblique\" because a view transform may have been applied already\n",
+    "# right-handed x-positive-right, y-positive-up, z-positive-nearer\n",
     "x_obq, y_obq, z_obq = symbols(\"^{obq}p_x, ^{obq}p_y, ^{obq}p_z\")\n",
-    "# This provides a path to getting pitch/heading from spherical coordinates\n",
+    "p_obq_s = symbols(\"^{obq}p\")\n",
+    "\n",
     "eqr_from_obq = Matrix([\n",
-    "    atan2(x_obq, z_obq),\n",
+    "    atan2(x_obq, -z_obq),  # negative Z, because the central pixel is at the far end of the sphere\n",
     "    asin(y_obq),\n",
     "])\n",
-    "eqr_from_obq\n"
+    "\n",
+    "p_eqr_s = symbols(\"^{eqr}p\")\n",
+    "Eq(p_eqr_s, eqr_from_obq, evaluate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
+   "id": "98b10c4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle ^{obq}p = \\left[\\begin{matrix}\\sin{\\left(^{eqr}p_x \\right)} \\cos{\\left(^{eqr}p_y \\right)}\\\\\\sin{\\left(^{eqr}p_y \\right)}\\\\- \\cos{\\left(^{eqr}p_x \\right)} \\cos{\\left(^{eqr}p_y \\right)}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "          ⎡sin(^{eqr}pₓ)⋅cos(^{eqr}p_y) ⎤\n",
+       "          ⎢                             ⎥\n",
+       "^{obq}p = ⎢       sin(^{eqr}p_y)        ⎥\n",
+       "          ⎢                             ⎥\n",
+       "          ⎣-cos(^{eqr}pₓ)⋅cos(^{eqr}p_y)⎦"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eqr_x, eqr_y = symbols(\"^{eqr}p_x, ^{eqr}p_y\")\n",
+    "obq_from_eqr = Matrix([\n",
+    "    [cos(eqr_y) * sin(eqr_x)],\n",
+    "    [sin(eqr_y)],\n",
+    "    [-cos(eqr_y) * cos(eqr_x)],\n",
+    "])\n",
+    "\n",
+    "Eq(p_obq_s, obq_from_eqr, evaluate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "9611ec06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\frac{- \\left(^{ste}p_x\\right)^{2} - \\left(^{ste}p_y\\right)^{2} + 4}{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4}\\\\\\frac{4 ^{ste}p_x}{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4}\\\\\\frac{4 ^{ste}p_y}{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4}\\end{matrix}\\right]$"
+       "$\\displaystyle ^{obq}p = \\left[\\begin{matrix}\\frac{4 ^{ste}p_x}{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4}\\\\\\frac{4 ^{ste}p_y}{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4}\\\\\\frac{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} - 4}{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡          2            2    ⎤\n",
-       "⎢- ^{ste}pₓ  - ^{ste}p_y  + 4⎥\n",
-       "⎢────────────────────────────⎥\n",
-       "⎢         2            2     ⎥\n",
-       "⎢ ^{ste}pₓ  + ^{ste}p_y  + 4 ⎥\n",
-       "⎢                            ⎥\n",
-       "⎢         4⋅^{ste}pₓ         ⎥\n",
-       "⎢ ────────────────────────── ⎥\n",
-       "⎢         2            2     ⎥\n",
-       "⎢ ^{ste}pₓ  + ^{ste}p_y  + 4 ⎥\n",
-       "⎢                            ⎥\n",
-       "⎢        4⋅^{ste}p_y         ⎥\n",
-       "⎢ ────────────────────────── ⎥\n",
-       "⎢         2            2     ⎥\n",
-       "⎣ ^{ste}pₓ  + ^{ste}p_y  + 4 ⎦"
+       "          ⎡        4⋅^{ste}pₓ        ⎤\n",
+       "          ⎢──────────────────────────⎥\n",
+       "          ⎢        2            2    ⎥\n",
+       "          ⎢^{ste}pₓ  + ^{ste}p_y  + 4⎥\n",
+       "          ⎢                          ⎥\n",
+       "          ⎢       4⋅^{ste}p_y        ⎥\n",
+       "          ⎢──────────────────────────⎥\n",
+       "^{obq}p = ⎢        2            2    ⎥\n",
+       "          ⎢^{ste}pₓ  + ^{ste}p_y  + 4⎥\n",
+       "          ⎢                          ⎥\n",
+       "          ⎢        2            2    ⎥\n",
+       "          ⎢^{ste}pₓ  + ^{ste}p_y  - 4⎥\n",
+       "          ⎢──────────────────────────⎥\n",
+       "          ⎢        2            2    ⎥\n",
+       "          ⎣^{ste}pₓ  + ^{ste}p_y  + 4⎦"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,20 +554,13 @@
     "\n",
     "d = ste_x**2 + ste_y**2 + 4\n",
     "obq_from_ste = Matrix([\n",
-    "    [(8 - d) / d],\n",
     "    [4 * ste_x / d],\n",
     "    [4 * ste_y / d],\n",
+    "    [(d - 8) / d],\n",
     "])\n",
-    "obq_from_ste"
+    "\n",
+    "Eq(p_obq_s, obq_from_ste, evaluate=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa94774e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
