--- a/doc/vimage_transforms.ipynb
+++ b/doc/vimage_transforms.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "8d86901a",
    "metadata": {},
    "outputs": [],
@@ -110,12 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "6668a2db",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -128,12 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "1e2f3714",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -153,7 +149,7 @@
        "                 ⎣  0      0    1 ⎦"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "f945c045",
    "metadata": {
     "code_folding": [
@@ -222,7 +218,7 @@
        "                 ⎣     0             0        1⎦"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "e61184e6",
    "metadata": {
     "code_folding": [
@@ -294,7 +290,7 @@
        "                 ⎣  0        0           1     ⎦"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "3a92c680",
    "metadata": {},
    "outputs": [
@@ -340,7 +336,7 @@
        "                 ⎣     0             0                     1              ⎦"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +348,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
+   "id": "477c537a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle ^{nic}X^{qwn} = \\left[\\begin{matrix}\\frac{2}{asc_{qwn} zoom} & 0 & - \\frac{w_{win}}{asc_{qwn} zoom}\\\\0 & - \\frac{2}{asc_{qwn} zoom} & \\frac{h_{win}}{asc_{qwn} zoom}\\\\0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "                 ⎡     2                        -w_win    ⎤\n",
+       "                 ⎢────────────       0        ────────────⎥\n",
+       "                 ⎢asc_qwn⋅zoom                asc_qwn⋅zoom⎥\n",
+       "                 ⎢                                        ⎥\n",
+       "^{nic}X__{qwn} = ⎢                  -2           h_win    ⎥\n",
+       "                 ⎢     0        ────────────  ────────────⎥\n",
+       "                 ⎢              asc_qwn⋅zoom  asc_qwn⋅zoom⎥\n",
+       "                 ⎢                                        ⎥\n",
+       "                 ⎣     0             0             1      ⎦"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nic_X_qwn_s = symbols(\"^{nic}X^{qwn}\")\n",
+    "Eq(nic_X_qwn_s, nic_X_ndc_m * ndc_X_qwn_m, evaluate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "3d7377b1",
    "metadata": {
     "code_folding": []
@@ -397,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "c94764e7",
    "metadata": {},
    "outputs": [
@@ -424,7 +453,7 @@
        "                    "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "b523a8f8",
    "metadata": {},
    "outputs": [
@@ -459,7 +488,7 @@
        "      asc_qwn⋅zoom       ⎠"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "f3a908d5",
    "metadata": {
     "code_folding": []
@@ -495,7 +524,7 @@
        "                 ⎣     0             0             1      ⎦"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +539,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
+   "id": "00d46bd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle ^{prj}X^{nic} = \\left[\\begin{matrix}\\frac{\\pi}{2} & 0 & 0\\\\0 & \\frac{\\pi}{2} & 0\\\\0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "                 ⎡π      ⎤\n",
+       "                 ⎢─  0  0⎥\n",
+       "                 ⎢2      ⎥\n",
+       "                 ⎢       ⎥\n",
+       "^{prj}X__{nic} = ⎢   π   ⎥\n",
+       "                 ⎢0  ─  0⎥\n",
+       "                 ⎢   2   ⎥\n",
+       "                 ⎢       ⎥\n",
+       "                 ⎣0  0  1⎦"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Projected 360 prj coordinates differ from nic by an isotropic scale\n",
+    "prj_X_nic_s = symbols(\"^{prj}X^{nic}\")\n",
+    "prj_X_nic_m = Matrix([\n",
+    "    [pi/2, 0, 0],\n",
+    "    [0, pi/2, 0],\n",
+    "    [0, 0, 1],\n",
+    "])\n",
+    "Eq(prj_X_nic_s, prj_X_nic_m, evaluate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a0d76620",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle ^{prj}X^{nic} = \\left[\\begin{matrix}\\frac{\\pi}{asc_{qwn} zoom} & 0 & - \\frac{\\pi w_{win}}{2 asc_{qwn} zoom}\\\\0 & - \\frac{\\pi}{asc_{qwn} zoom} & \\frac{\\pi h_{win}}{2 asc_{qwn} zoom}\\\\0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "                 ⎡     π                        -π⋅w_win    ⎤\n",
+       "                 ⎢────────────       0        ──────────────⎥\n",
+       "                 ⎢asc_qwn⋅zoom                2⋅asc_qwn⋅zoom⎥\n",
+       "                 ⎢                                          ⎥\n",
+       "^{prj}X__{nic} = ⎢                  -π           π⋅h_win    ⎥\n",
+       "                 ⎢     0        ────────────  ──────────────⎥\n",
+       "                 ⎢              asc_qwn⋅zoom  2⋅asc_qwn⋅zoom⎥\n",
+       "                 ⎢                                          ⎥\n",
+       "                 ⎣     0             0              1       ⎦"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prj_X_qwn_s = symbols(\"^{prj}X^{nic}\")\n",
+    "prj_X_qwn_m = prj_X_nic_m * nic_X_qwn_m\n",
+    "Eq(prj_X_qwn_s, prj_X_qwn_m, evaluate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "8c893785",
    "metadata": {},
    "outputs": [
@@ -529,7 +631,7 @@
        "                 ⎣              asc_qwn⋅zoom⎦"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,8 +645,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "c057f041",
+   "execution_count": 25,
+   "id": "efbbf8f6",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +664,7 @@
        "                 ⎣              asc_qwn⋅zoom⎦"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "f5840a4b",
    "metadata": {
     "code_folding": []
@@ -594,7 +696,7 @@
        "          ⎣      asin(^{obq}p_y)      ⎦"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "4f8c154e",
    "metadata": {},
    "outputs": [
@@ -637,7 +739,7 @@
        "          ⎣-cos(^{eqr}pₓ)⋅cos(^{eqr}p_y)⎦"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "id": "9611ec06",
    "metadata": {},
    "outputs": [
@@ -682,7 +784,7 @@
        "          ⎣^{ste}pₓ  + ^{ste}p_y  + 4⎦"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,6 +805,109 @@
     "\n",
     "Eq(p_obq_s, obq_from_ste, evaluate=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0209482c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}^{obq}{\\partial}p_x\\\\^{obq}{\\partial}p_y\\\\^{obq}{\\partial}p_z\\end{matrix}\\right] = \\left[\\begin{matrix}- \\frac{8 \\left(^{ste}p_x\\right)^{2}}{\\left(\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4\\right)^{2}} + \\frac{4}{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4} & - \\frac{8 ^{ste}p_x ^{ste}p_y}{\\left(\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4\\right)^{2}}\\\\- \\frac{8 ^{ste}p_x ^{ste}p_y}{\\left(\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4\\right)^{2}} & - \\frac{8 \\left(^{ste}p_y\\right)^{2}}{\\left(\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4\\right)^{2}} + \\frac{4}{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4}\\\\- \\frac{2 ^{ste}p_x \\left(\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} - 4\\right)}{\\left(\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4\\right)^{2}} + \\frac{2 ^{ste}p_x}{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4} & - \\frac{2 ^{ste}p_y \\left(\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} - 4\\right)}{\\left(\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4\\right)^{2}} + \\frac{2 ^{ste}p_y}{\\left(^{ste}p_x\\right)^{2} + \\left(^{ste}p_y\\right)^{2} + 4}\\end{matrix}\\right] \\left[\\begin{matrix}^{ste}{\\partial}p_x & ^{ste}{\\partial}p_y\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "                        ⎡                          2                          \n",
+       "                        ⎢                8⋅^{ste}pₓ                         4 \n",
+       "                        ⎢     - ───────────────────────────── + ──────────────\n",
+       "                        ⎢                                   2           2     \n",
+       "                        ⎢       ⎛        2            2    ⎞    ^{ste}pₓ  + ^{\n",
+       "                        ⎢       ⎝^{ste}pₓ  + ^{ste}p_y  + 4⎠                  \n",
+       "                        ⎢                                                     \n",
+       "                        ⎢                                                     \n",
+       "⎡^{obq}{\\partial}pₓ ⎤   ⎢                        -8⋅^{ste}pₓ⋅^{ste}p_y        \n",
+       "⎢                   ⎥   ⎢                    ─────────────────────────────    \n",
+       "⎢^{obq}{\\partial}p_y⎥ = ⎢                                                2    \n",
+       "⎢                   ⎥   ⎢                    ⎛        2            2    ⎞     \n",
+       "⎣^{obq}{\\partial}p_z⎦   ⎢                    ⎝^{ste}pₓ  + ^{ste}p_y  + 4⎠     \n",
+       "                        ⎢                                                     \n",
+       "                        ⎢             ⎛        2            2    ⎞            \n",
+       "                        ⎢  2⋅^{ste}pₓ⋅⎝^{ste}pₓ  + ^{ste}p_y  - 4⎠           2\n",
+       "                        ⎢- ─────────────────────────────────────── + ─────────\n",
+       "                        ⎢                                   2                2\n",
+       "                        ⎢       ⎛        2            2    ⎞         ^{ste}pₓ \n",
+       "                        ⎣       ⎝^{ste}pₓ  + ^{ste}p_y  + 4⎠                  \n",
+       "\n",
+       "                                                                              \n",
+       "                                            -8⋅^{ste}pₓ⋅^{ste}p_y             \n",
+       "────────────                            ─────────────────────────────         \n",
+       "       2                                                            2         \n",
+       "ste}p_y  + 4                            ⎛        2            2    ⎞          \n",
+       "                                        ⎝^{ste}pₓ  + ^{ste}p_y  + 4⎠          \n",
+       "                                                                              \n",
+       "                                              2                               \n",
+       "                                   8⋅^{ste}p_y                        4       \n",
+       "                        - ───────────────────────────── + ────────────────────\n",
+       "                                                      2           2           \n",
+       "                          ⎛        2            2    ⎞    ^{ste}pₓ  + ^{ste}p_\n",
+       "                          ⎝^{ste}pₓ  + ^{ste}p_y  + 4⎠                        \n",
+       "                                                                              \n",
+       "                                 ⎛        2            2    ⎞                 \n",
+       "⋅^{ste}pₓ            2⋅^{ste}p_y⋅⎝^{ste}pₓ  + ^{ste}p_y  - 4⎠          2⋅^{ste\n",
+       "─────────────────  - ──────────────────────────────────────── + ──────────────\n",
+       "            2                                         2                 2     \n",
+       " + ^{ste}p_y  + 4         ⎛        2            2    ⎞          ^{ste}pₓ  + ^{\n",
+       "                          ⎝^{ste}pₓ  + ^{ste}p_y  + 4⎠                        \n",
+       "\n",
+       "            ⎤                                          \n",
+       "            ⎥                                          \n",
+       "            ⎥                                          \n",
+       "            ⎥                                          \n",
+       "            ⎥                                          \n",
+       "            ⎥                                          \n",
+       "            ⎥                                          \n",
+       "            ⎥                                          \n",
+       "            ⎥                                          \n",
+       "──────      ⎥                                          \n",
+       " 2          ⎥⋅[^{ste}{\\partial}pₓ  ^{ste}{\\partial}p_y]\n",
+       "y  + 4      ⎥                                          \n",
+       "            ⎥                                          \n",
+       "            ⎥                                          \n",
+       "            ⎥                                          \n",
+       "}p_y        ⎥                                          \n",
+       "────────────⎥                                          \n",
+       "       2    ⎥                                          \n",
+       "ste}p_y  + 4⎥                                          \n",
+       "            ⎦                                          "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Stereographic Jacobian obq_J_ste\n",
+    "obq_J_ste_m = Matrix([\n",
+    "    [diff(obq_from_ste[0], ste_x), diff(obq_from_ste[0], ste_y)],\n",
+    "    [diff(obq_from_ste[1], ste_x), diff(obq_from_ste[1], ste_y)],\n",
+    "    [diff(obq_from_ste[2], ste_x), diff(obq_from_ste[2], ste_y)],\n",
+    "])\n",
+    "dp_obq_x, dp_obq_y, dp_obq_z = symbols(\"^{obq}{\\partial}p_x ^{obq}{\\partial}p_y ^{obq}{\\partial}p_z\")\n",
+    "dp_ste_x, dp_ste_y = symbols(\"^{ste}{\\partial}p_x ^{ste}{\\partial}p_y\")\n",
+    "dp_obq = Matrix([dp_obq_x, dp_obq_y, dp_obq_z])\n",
+    "dp_ste = Matrix([dp_ste_x, dp_ste_y])\n",
+    "Eq(dp_obq, ue(obq_J_ste_m) * ue(dp_ste.transpose()), evaluate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ff866d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
