Sketch in drawing the selection box in the shader. Sketch in right click context menu.

--- a/doc/vimage_transforms.ipynb
+++ b/doc/vimage_transforms.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "8d86901a",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "6668a2db",
    "metadata": {
     "code_folding": []
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "1e2f3714",
    "metadata": {
     "code_folding": []
@@ -149,7 +149,7 @@
        "                 ⎣  0      0    1 ⎦"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
+   "id": "735efa04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle ^{qwn}X^{ndc} = \\left[\\begin{matrix}\\frac{w_{win}}{2} & 0 & \\frac{w_{win}}{2}\\\\0 & - \\frac{h_{win}}{2} & \\frac{h_{win}}{2}\\\\0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "                 ⎡w_win           w_win⎤\n",
+       "                 ⎢─────     0     ─────⎥\n",
+       "                 ⎢  2               2  ⎥\n",
+       "                 ⎢                     ⎥\n",
+       "^{qwn}X__{ndc} = ⎢       -h_win   h_win⎥\n",
+       "                 ⎢  0    ───────  ─────⎥\n",
+       "                 ⎢          2       2  ⎥\n",
+       "                 ⎢                     ⎥\n",
+       "                 ⎣  0       0       1  ⎦"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Eq(symbols(\"^{qwn}X^{ndc}\"), ndc_X_qwn_m.inv(), evaluate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "f945c045",
    "metadata": {
     "code_folding": [
@@ -218,7 +250,7 @@
        "                 ⎣     0             0        1⎦"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "e61184e6",
    "metadata": {
     "code_folding": [
@@ -290,7 +322,7 @@
        "                 ⎣  0        0           1     ⎦"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +347,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
+   "id": "a2e8ca29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle ^{omp}X^{ndc} = \\left[\\begin{matrix}\\frac{asc_{omp} w_{win}}{2 asc_{qwn} zoom} & 0 & ^{omp}cen_x\\\\0 & - \\frac{asc_{omp} h_{win}}{2 asc_{qwn} zoom} & ^{omp}cen_y\\\\0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "                 ⎡ ascₒₘₚ⋅w_win                              ⎤\n",
+       "                 ⎢──────────────        0         ^{omp}cenₓ ⎥\n",
+       "                 ⎢2⋅asc_qwn⋅zoom                             ⎥\n",
+       "                 ⎢                                           ⎥\n",
+       "^{omp}X__{ndc} = ⎢                -ascₒₘₚ⋅h_win              ⎥\n",
+       "                 ⎢      0         ──────────────  ^{omp}cen_y⎥\n",
+       "                 ⎢                2⋅asc_qwn⋅zoom             ⎥\n",
+       "                 ⎢                                           ⎥\n",
+       "                 ⎣      0               0              1     ⎦"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Eq(symbols(\"^{omp}X^{ndc}\"), omp_X_nic_m * nic_X_ndc_m, evaluate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "3a92c680",
    "metadata": {},
    "outputs": [
@@ -336,7 +400,7 @@
        "                 ⎣     0             0                     1              ⎦"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "bc04712d",
    "metadata": {},
    "outputs": [
@@ -369,7 +433,7 @@
        "                 ⎣     0             0             1      ⎦"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "3d7377b1",
    "metadata": {
     "code_folding": []
@@ -426,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "c94764e7",
    "metadata": {},
    "outputs": [
@@ -453,7 +517,7 @@
        "                    "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "b523a8f8",
    "metadata": {},
    "outputs": [
@@ -488,7 +552,7 @@
        "      asc_qwn⋅zoom       ⎠"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "f3a908d5",
    "metadata": {
     "code_folding": []
@@ -524,7 +588,7 @@
        "                 ⎣     0             0             1      ⎦"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "00d46bd2",
    "metadata": {},
    "outputs": [
@@ -560,7 +624,7 @@
        "                 ⎣0  0  1⎦"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "a0d76620",
    "metadata": {},
    "outputs": [
@@ -599,7 +663,7 @@
        "                 ⎣     0             0              1       ⎦"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "8c893785",
    "metadata": {},
    "outputs": [
@@ -631,7 +695,7 @@
        "                 ⎣              asc_qwn⋅zoom⎦"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "efbbf8f6",
    "metadata": {},
    "outputs": [
@@ -664,7 +728,7 @@
        "                 ⎣              asc_qwn⋅zoom⎦"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "f5840a4b",
    "metadata": {
     "code_folding": []
@@ -696,7 +760,7 @@
        "          ⎣      asin(^{obq}p_y)      ⎦"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "4f8c154e",
    "metadata": {},
    "outputs": [
@@ -739,7 +803,7 @@
        "          ⎣-cos(^{eqr}pₓ)⋅cos(^{eqr}p_y)⎦"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "9611ec06",
    "metadata": {},
    "outputs": [
@@ -784,7 +848,7 @@
        "          ⎣^{ste}pₓ  + ^{ste}p_y  + 4⎦"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "0209482c",
    "metadata": {},
    "outputs": [
@@ -882,7 +946,7 @@
        "            ⎦                                          "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
