--- a/doc/vimage_transforms.ipynb
+++ b/doc/vimage_transforms.ipynb
@@ -18,7 +18,8 @@
     "| obq   | radians       | center   | up    | \"oblique\" image sphere rotated to current view |\n",
     "| ont   | radians       | center   | up    | image sphere rectified to canonical orientation using EXIF/XMP metadata |\n",
     "| eqr   | radians       | center   | up    | heading, pitch (equirectangular projection) |\n",
-    "| txc   | images        | top left | down  | OpenGL texture coordinates |"
+    "| tco   | images        | top left | down  | oriented OpenGL texture coordinates, as if the raw data were oriented |\n",
+    "| tcr   | images        | top left | down  | raw image data OpenGL texture coordinates (not oriented) |"
    ]
   },
   {
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "735efa04",
    "metadata": {},
    "outputs": [
@@ -214,7 +215,7 @@
        "                 ⎣  0       0       1  ⎦"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f945c045",
    "metadata": {
     "code_folding": [
@@ -250,7 +251,7 @@
        "                 ⎣     0             0        1⎦"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e61184e6",
    "metadata": {
     "code_folding": [
@@ -322,7 +323,7 @@
        "                 ⎣  0        0           1     ⎦"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "a2e8ca29",
    "metadata": {},
    "outputs": [
@@ -368,7 +369,7 @@
        "                 ⎣      0               0              1     ⎦"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3a92c680",
    "metadata": {},
    "outputs": [
@@ -400,7 +401,7 @@
        "                 ⎣     0             0                     1              ⎦"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "bc04712d",
    "metadata": {},
    "outputs": [
@@ -433,7 +434,7 @@
        "                 ⎣     0             0             1      ⎦"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3d7377b1",
    "metadata": {
     "code_folding": []
@@ -490,7 +491,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
+   "id": "77d9d9e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle ^{tco}X^{omp} = \\left[\\begin{matrix}\\frac{1}{w_{omp}} & 0 & 0\\\\0 & \\frac{1}{h_{omp}} & 0\\\\0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "                 ⎡ 1           ⎤\n",
+       "                 ⎢────   0    0⎥\n",
+       "                 ⎢wₒₘₚ         ⎥\n",
+       "                 ⎢             ⎥\n",
+       "^{tco}X__{omp} = ⎢       1     ⎥\n",
+       "                 ⎢ 0    ────  0⎥\n",
+       "                 ⎢      hₒₘₚ   ⎥\n",
+       "                 ⎢             ⎥\n",
+       "                 ⎣ 0     0    1⎦"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Conversion from image pixel coordinates to oriented texture coordinates\n",
+    "\n",
+    "tco_X_omp = Matrix([\n",
+    "    [1/w_omp, 0, 0],\n",
+    "    [0, 1/h_omp, 0],\n",
+    "    [0, 0, 1],\n",
+    "])\n",
+    "\n",
+    "Eq(symbols(\"^{tco}X^{omp}\"), tco_X_omp, evaluate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "c94764e7",
    "metadata": {},
    "outputs": [
@@ -517,7 +558,7 @@
        "                    "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "b523a8f8",
    "metadata": {},
    "outputs": [
@@ -552,7 +593,7 @@
        "      asc_qwn⋅zoom       ⎠"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "f3a908d5",
    "metadata": {
     "code_folding": []
@@ -588,7 +629,7 @@
        "                 ⎣     0             0             1      ⎦"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "00d46bd2",
    "metadata": {},
    "outputs": [
@@ -624,7 +665,7 @@
        "                 ⎣0  0  1⎦"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "a0d76620",
    "metadata": {},
    "outputs": [
@@ -663,7 +704,7 @@
        "                 ⎣     0             0              1       ⎦"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "8c893785",
    "metadata": {},
    "outputs": [
@@ -695,7 +736,7 @@
        "                 ⎣              asc_qwn⋅zoom⎦"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "efbbf8f6",
    "metadata": {},
    "outputs": [
@@ -728,7 +769,7 @@
        "                 ⎣              asc_qwn⋅zoom⎦"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "f5840a4b",
    "metadata": {
     "code_folding": []
@@ -760,7 +801,7 @@
        "          ⎣      asin(^{obq}p_y)      ⎦"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "4f8c154e",
    "metadata": {},
    "outputs": [
@@ -803,7 +844,7 @@
        "          ⎣-cos(^{eqr}pₓ)⋅cos(^{eqr}p_y)⎦"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "9611ec06",
    "metadata": {},
    "outputs": [
@@ -848,7 +889,7 @@
        "          ⎣^{ste}pₓ  + ^{ste}p_y  + 4⎦"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "0209482c",
    "metadata": {},
    "outputs": [
@@ -946,7 +987,7 @@
        "            ⎦                                          "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
