Debug basic use of new shader.

--- a/doc/vimage_transforms.ipynb
+++ b/doc/vimage_transforms.ipynb
@@ -380,6 +380,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "id": "28bb3ff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle ^{ndc}X^{omp} = \\left[\\begin{matrix}\\frac{2 asc_{qwn} zoom}{asc_{omp} w_{win}} & 0 & - \\frac{2 ^{omp}cen_x asc_{qwn} zoom}{asc_{omp} w_{win}}\\\\0 & - \\frac{2 asc_{qwn} zoom}{asc_{omp} h_{win}} & \\frac{2 ^{omp}cen_y asc_{qwn} zoom}{asc_{omp} h_{win}}\\\\0 & 0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "                 ⎡2⋅asc_qwn⋅zoom                    -2⋅^{omp}cenₓ⋅asc_qwn⋅zoom\n",
+       "                 ⎢──────────────         0          ──────────────────────────\n",
+       "                 ⎢ ascₒₘₚ⋅w_win                             ascₒₘₚ⋅w_win      \n",
+       "                 ⎢                                                            \n",
+       "^{ndc}X__{omp} = ⎢                -2⋅asc_qwn⋅zoom   2⋅^{omp}cen_y⋅asc_qwn⋅zoom\n",
+       "                 ⎢      0         ────────────────  ──────────────────────────\n",
+       "                 ⎢                  ascₒₘₚ⋅h_win           ascₒₘₚ⋅h_win       \n",
+       "                 ⎢                                                            \n",
+       "                 ⎣      0                0                       1            \n",
+       "\n",
+       " ⎤\n",
+       "─⎥\n",
+       " ⎥\n",
+       " ⎥\n",
+       " ⎥\n",
+       " ⎥\n",
+       " ⎥\n",
+       " ⎥\n",
+       " ⎦"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Eq(symbols(\"^{ndc}X^{omp}\"), (omp_X_nic_m * nic_X_ndc_m).inv(), evaluate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "3a92c680",
    "metadata": {},
@@ -491,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "77d9d9e8",
    "metadata": {},
    "outputs": [
@@ -512,7 +554,7 @@
        "                 ⎣ 0     0    1⎦"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c94764e7",
    "metadata": {},
    "outputs": [
@@ -558,7 +600,7 @@
        "                    "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b523a8f8",
    "metadata": {},
    "outputs": [
@@ -593,7 +635,7 @@
        "      asc_qwn⋅zoom       ⎠"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f3a908d5",
    "metadata": {
     "code_folding": []
@@ -629,7 +671,7 @@
        "                 ⎣     0             0             1      ⎦"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "00d46bd2",
    "metadata": {},
    "outputs": [
@@ -665,7 +707,7 @@
        "                 ⎣0  0  1⎦"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "a0d76620",
    "metadata": {},
    "outputs": [
@@ -704,7 +746,7 @@
        "                 ⎣     0             0              1       ⎦"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "8c893785",
    "metadata": {},
    "outputs": [
@@ -736,7 +778,7 @@
        "                 ⎣              asc_qwn⋅zoom⎦"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "efbbf8f6",
    "metadata": {},
    "outputs": [
@@ -769,7 +811,7 @@
        "                 ⎣              asc_qwn⋅zoom⎦"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "f5840a4b",
    "metadata": {
     "code_folding": []
@@ -801,7 +843,7 @@
        "          ⎣      asin(^{obq}p_y)      ⎦"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "4f8c154e",
    "metadata": {},
    "outputs": [
@@ -844,7 +886,7 @@
        "          ⎣-cos(^{eqr}pₓ)⋅cos(^{eqr}p_y)⎦"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "9611ec06",
    "metadata": {},
    "outputs": [
@@ -889,7 +931,7 @@
        "          ⎣^{ste}pₓ  + ^{ste}p_y  + 4⎦"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "0209482c",
    "metadata": {},
    "outputs": [
@@ -987,7 +1029,7 @@
        "            ⎦                                          "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
